--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,13 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+  "schematics": {
+    "@schematics/angular:component": {
+      "inlineStyle": false,
+      "inlineTemplate": false,
+      "skipTests": true
+    }
+  },
   "cli": {
     "packageManager": "npm"
   },
